--- a/vesta-launcher/ui/dialog/dialog.module.css
+++ b/vesta-launcher/ui/dialog/dialog.module.css
@@ -34,7 +34,7 @@
 	position: fixed;
 	left: 50%;
 	top: 50%;
-	z-index: 10000;
+	z-index: var(--z-modal);
 	display: grid;
 	max-height: 100vh;
 	width: 100%;
